// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alerts should render correctly with alerts 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "display": "grid",
      "gridAutoRows": "auto",
      "gridRowGap": "5px",
      "gridTemplateColumns": "auto",
      "overflowY": "auto",
      "paddingTop": "5px",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 10000,
    }
  }
>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="0"
    onMouseEnter={[Function]}
    title="alerts.infoMessage.title"
    variant="info"
  >
    <Trans
      components={Array []}
      i18nKey="alerts.infoMessage.message"
      values={Object {}}
    />
  </Alert>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="1"
    onMouseEnter={[Function]}
    title="alerts.successMessage.title"
    variant="success"
  >
    <Trans
      components={Array []}
      i18nKey="alerts.successMessage.message"
      values={Object {}}
    />
  </Alert>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="2"
    onMouseEnter={[Function]}
    title="alerts.dangerMessage.title"
    variant="danger"
  >
    <Trans
      components={Array []}
      i18nKey="alerts.dangerMessage.message"
      values={Object {}}
    />
  </Alert>
</div>
`;

exports[`Alerts should render correctly with alerts with components 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "display": "grid",
      "gridAutoRows": "auto",
      "gridRowGap": "5px",
      "gridTemplateColumns": "auto",
      "overflowY": "auto",
      "paddingTop": "5px",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 10000,
    }
  }
>
  <Alert
    action={
      <AlertActionCloseButton
        onClose={[Function]}
      />
    }
    className="fade-and-slide-in"
    key="0"
    onMouseEnter={[Function]}
    title="alerts.exception.title"
    variant="danger"
  >
    <Trans
      components={
        Array [
          <ServerSideExceptionDialog
            exceptionCause={
              Object {
                "exceptionCause": null,
                "exceptionClass": "Error2",
                "exceptionMessage": "message2",
                "i18nKey": "error2",
                "messageParameters": Array [],
                "stackTrace": Array [
                  "2.1",
                  "2.2",
                  "2.3",
                ],
              }
            }
            exceptionClass="Error1"
            exceptionMessage="message1"
            i18nKey="error1"
            messageParameters={
              Array [
                "hi",
              ]
            }
            stackTrace={
              Array [
                "1.1",
                "1.2",
                "1.3",
              ]
            }
          />,
        ]
      }
      i18nKey="alerts.exception.message"
      values={Object {}}
    />
  </Alert>
</div>
`;

exports[`Alerts should render correctly without alerts 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "display": "grid",
      "gridAutoRows": "auto",
      "gridRowGap": "5px",
      "gridTemplateColumns": "auto",
      "overflowY": "auto",
      "paddingTop": "5px",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 10000,
    }
  }
/>
`;

exports[`Alerts should render the correct component for AlertComponent.SERVER_SIDE_EXCEPTION_DIALOG 1`] = `
<ServerSideExceptionDialog
  exceptionCause={
    Object {
      "exceptionCause": null,
      "exceptionClass": "Error2",
      "exceptionMessage": "message2",
      "i18nKey": "error2",
      "messageParameters": Array [],
      "stackTrace": Array [
        "2.1",
        "2.2",
        "2.3",
      ],
    }
  }
  exceptionClass="Error1"
  exceptionMessage="message1"
  i18nKey="error1"
  messageParameters={
    Array [
      "hi",
    ]
  }
  stackTrace={
    Array [
      "1.1",
      "1.2",
      "1.3",
    ]
  }
/>
`;
